--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,7 +9,7 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build": "prisma generate && tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
