--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:generate": "pnpm --filter @ecosystem/database db:generate",
     "db:push": "pnpm --filter @ecosystem/database db:push",
     "db:studio": "pnpm --filter @ecosystem/database db:studio",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "pnpm db:generate"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
