--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^15.1.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^7.2.0",
     "date-fns": "^3.6.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.460.0",
