--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -12,6 +12,7 @@
     "@ecosystem/database": "workspace:*",
     "@ecosystem/ui": "workspace:*",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^7.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.59.0",
     "bcryptjs": "^2.4.3",
