--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.34.5",
     "sonner": "^1.7.0",
     "zod": "^3.23.0"
   },
