--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -22,6 +22,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-markdown": "^10.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
