--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@ecosystem/database": "workspace:*",
     "@ecosystem/ui": "workspace:*",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^7.2.0",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.59.0",
     "bcryptjs": "^2.4.3",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.460.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.10",
@@ -23,6 +26,7 @@
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
+    "react-to-print": "^3.2.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.34.5",
     "sonner": "^1.7.0",
@@ -39,6 +43,8 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
     "dotenv": "^17.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
