--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^7.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@react-pdf/renderer": "^4.3.2",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.59.0",
