--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.59.0",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
     "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.460.0",
     "next": "^15.1.0",
@@ -31,6 +32,7 @@
     "remark-gfm": "^4.0.0",
     "sharp": "^0.34.5",
     "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
