--- a/apps/eds/package.json
+++ b/apps/eds/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "googleapis": "^140.0.0",
     "lucide-react": "^0.460.0",
     "next": "^15.1.0",
+    "next-auth": "^4.24.10",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "sonner": "^1.7.0",
@@ -31,6 +33,7 @@
     "@ecosystem/typescript-config": "workspace:*",
     "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
